--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,61 +20,13 @@
                 android:paddingStart="18dp"
                 android:orientation="vertical">
 
-                <!-- notification bar -->
-                <RelativeLayout
-                    android:id="@+id/lay_notification_bar"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/txt_hello"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:font='@{"sans"}'
-                        android:text="@string/hello"
-                        android:textColor="@color/text_blue"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/img_notifications"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:layout_height="17dp"
-                        android:layout_width="17dp"
-                        android:src="@drawable/ic_light_notification" />
-
-
-                </RelativeLayout>
-
-                <!-- text view name -->
-                <TextView
-                    android:id="@+id/txt_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:textStyle="normal"
-                    android:textSize="13sp"
-                    android:font='@{"sans"}'
-                    android:textColor="@color/text_blue"/>
-
-                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
-                    android:id="@+id/prg_banners"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:indeterminate="true"
-                    app:mpb_progressStyle="horizontal"
-                    android:visibility="gone"
-                    style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
                 <!-- section banners -->
                 <androidx.cardview.widget.CardView
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
                     android:layout_width="match_parent"
                     app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/white2"
                     >
 
                     <com.smarteist.autoimageslider.SliderView
@@ -189,7 +141,7 @@
 
                         <!-- show all -->
                         <TextView
-                            android:id="@+id/txt_lattest_posts_show_all"
+                            android:id="@+id/txt_latest_posts_show_all"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/show_all"
