--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,13 +14,13 @@
     <color name="text_back_gray">#FBFBFB</color>
     <color name="text_dark_gray">#232126</color>
     <color name="text_blue">#22326e</color>
+    <color name="app_bar_blue">#383456</color>
 
 
 
     <color name="orange">#FFAC00</color>
     <color name="app_bar">#00778A</color>
     <color name="status_bar">#00778A</color>
-    <color name="app_bar_blue">#00A0BA</color>
     <color name="under_app_bar">#0090A7</color>
 
 
