--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,23 +3,17 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/text_dark_gray</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/text_blue</item>
         <item name="colorAccent">@color/text_blue</item>
+        <item name="colorSecondary">@color/text_blue</item>
+        <item name="colorOnPrimary">@color/text_blue</item>
+        <item name="colorOnSurface">@color/text_blue</item>
+        <item name="colorOnSecondary">@color/text_blue</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:homeAsUpIndicator">@drawable/ic_cross_white</item>
     </style>
-
-    <!--    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox"-->
-<!--    -->
-<!--    <style name="DatePickerStyle" parent="Widget.MaterialComponents.MaterialCalendar">-->
-<!--        <item name="materialCalendarStyle">@style/Widget.MaterialComponents.MaterialCalendar</item>-->
-<!--        <item name="materialCalendarFullscreenTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar.Fullscreen</item>-->
-<!--        <item name="materialCalendarTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar</item>-->
-<!--    </style>-->
-
 
     <style name="TextPicker">
         <item name="android:textColor">@color/white</item>
@@ -40,7 +34,6 @@
         <item name="android:colorForeground">@color/white</item>
     </style>
 
-
     <style name="TextViewNormal">
         <item name="android:textColor">@color/YIGray5</item>
         <item name="android:textSize">11sp</item>
@@ -59,7 +52,6 @@
         <item name="tabRippleColor">@color/white</item>
         <item name="tabIndicatorColor">@color/white</item>
     </style>
-
 
     <style name="MenuLabelsStyle">
         <item name="android:background">@drawable/button_background_light_gray_border_blue</item>
