--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="text_dark_gray">#232126</color>
     <color name="text_blue">#22326e</color>
     <color name="app_bar_blue">#383456</color>
+    <color name="border_gray">#f6f6f8</color>
 
 
 
